--wip-- [skip ci]

--- a/game.project
+++ b/game.project
@@ -1,13 +1,13 @@
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /main/scene/scene.collectionc
 render = /render/default.renderc
 
 [script]
 shared_state = 1
 
 [display]
-width = 960
-height = 540
+width = 1080
+height = 700
 vsync = 0
 samples = 2
 high_dpi = 1
@@ -17,8 +17,13 @@ input_method = HiddenInputField
 
 [project]
 title = 3d-walker
-dependencies#0 = https://github.com/britzl/monarch/archive/refs/tags/3.7.0.zip
+dependencies = 
 
 [physics]
 type = 3D
+debug = 0
+gravity_y = -30.0
+
+[native_extension]
+app_manifest = /game.appmanifest
 
