--- a/game.project
+++ b/game.project
@@ -17,7 +17,8 @@ input_method = HiddenInputField
 
 [project]
 title = 3d-walker
-dependencies = 
+dependencies#0 = https://github.com/astrochili/defold-operator/archive/refs/tags/1.3.zip
+dependencies#1 = https://github.com/indiesoftby/defold-pointer-lock/archive/refs/tags/2.0.0.zip
 
 [physics]
 type = 3D
